--- a/index.html
+++ b/index.html
@@ -4,16 +4,18 @@
     <meta charset="utf-8">
     <title>Semaine 2</title>
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css">
+    <link rel="stylesheet" href="static/css/app.css">
   </head>
   <body>
     <h1>Semaine 2</h1>
     <section>
       <select id="selectTeam">
-        <option>Choisir un club</option>
+        <option value="0">Choisir un club</option>
         <option>RC Strasbourg</option>
         <option>PSG</option>
         <option>Juventus</option>
       </select>
+      <span id="resultNumber"></span>
     </section>
     <section id="players"></section>
 
