--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
         <option>Juventus</option>
       </select>
       <span id="resultNumber"></span>
+      <input id="cbActive" type="checkbox"> joueurs en activité
     </section>
     <section id="players"></section>
 
