--- a/projet1/index.html
+++ b/projet1/index.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="static/css/app.css">
   </head>
   <body>
-    <h1>Semaine 2</h1>
+    <h1>Semaine 2 - projet 1</h1>
     <section>
       <select id="selectTeam">
         <option value="0">Choisir un club</option>
@@ -20,6 +20,7 @@
     </section>
     <section id="players"></section>
 
+    <!-- chargement du script après chargement du DOM -->
     <script src="static/js/app.js"></script>
   </body>
 </html>
