--- a/projet4/index.html
+++ b/projet4/index.html
@@ -8,6 +8,10 @@
   </head>
   <body>
     <h1>Semaine 2 - projet 4</h1>
+    <section>
+      <img id="flagEn" class="flag" src="static/img/flagEn.png" alt="">
+      <img id="flagIt" class="flag" src="static/img/flagIt.jpg" alt="">
+    </section>
 
     <section>
       <p>
