--- a/projet8/index.html
+++ b/projet8/index.html
@@ -7,14 +7,14 @@
     <link rel="stylesheet" href="static/css/app.css">
   </head>
   <body>
-    <h1>Semaine 2 - projet 7</h1>
+    <h1>Semaine 2 - projet 8</h1>
 
-    <form novalidate>
-      <input id="destination" type="text" placeholder="Choisir une destination">
-      <ul id="suggestionList"></ul>
-    </form>
+    <button id="btnTest" class="btn btn-primary">Test</button>
 
-    <p id="otherCities"></p>
+    <div id="box">
+      <p id="counter"></p>
+      <p>Test réussi !</p>
+    </div>
 
     <!-- chargement du script après chargement du DOM -->
     <script src="static/js/app.js"></script>
